; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_update_devmode_handleA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_update_devmode_handleA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@GMEM_MOVEABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.TYPE_4__*)* @update_devmode_handleA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @update_devmode_handleA(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @GlobalSize(i32* %7)
  store i64 %8, i64* %5, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %11, %14
  %16 = load i64, i64* %5, align 8
  %17 = icmp sgt i64 %15, %16
  br i1 %17, label %18, label %42

18:                                               ; preds = %2
  %19 = load i32*, i32** %3, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %18
  %22 = load i32*, i32** %3, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = add nsw i64 %25, %28
  %30 = call i32* @GlobalReAlloc(i32* %22, i64 %29, i32 0)
  store i32* %30, i32** %3, align 8
  br label %41

31:                                               ; preds = %18
  %32 = load i32, i32* @GMEM_MOVEABLE, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = add nsw i64 %35, %38
  %40 = call i32* @GlobalAlloc(i32 %32, i64 %39)
  store i32* %40, i32** %3, align 8
  br label %41

41:                                               ; preds = %31, %21
  br label %42

42:                                               ; preds = %41, %2
  %43 = load i32*, i32** %3, align 8
  %44 = icmp ne i32* %43, null
  br i1 %44, label %45, label %67

45:                                               ; preds = %42
  %46 = load i32*, i32** %3, align 8
  %47 = call i64 @GlobalLock(i32* %46)
  store i64 %47, i64* %6, align 8
  %48 = load i64, i64* %6, align 8
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %63

50:                                               ; preds = %45
  %51 = load i64, i64* %6, align 8
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %53 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %57 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %56, i32 0, i32 1
  %58 = load i64, i64* %57, align 8
  %59 = add nsw i64 %55, %58
  %60 = call i32 @memcpy(i64 %51, %struct.TYPE_4__* %52, i64 %59)
  %61 = load i32*, i32** %3, align 8
  %62 = call i32 @GlobalUnlock(i32* %61)
  br label %66

63:                                               ; preds = %45
  %64 = load i32*, i32** %3, align 8
  %65 = call i32 @GlobalFree(i32* %64)
  store i32* null, i32** %3, align 8
  br label %66

66:                                               ; preds = %63, %50
  br label %67

67:                                               ; preds = %66, %42
  %68 = load i32*, i32** %3, align 8
  ret i32* %68
}

declare dso_local i64 @GlobalSize(i32*) #1

declare dso_local i32* @GlobalReAlloc(i32*, i64, i32) #1

declare dso_local i32* @GlobalAlloc(i32, i64) #1

declare dso_local i64 @GlobalLock(i32*) #1

declare dso_local i32 @memcpy(i64, %struct.TYPE_4__*, i64) #1

declare dso_local i32 @GlobalUnlock(i32*) #1

declare dso_local i32 @GlobalFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
